--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 name: Adrien Missemer
 
 # Short bio or description (displayed in the header)
-description: SAP Hybris Solution Architect and DevOps enthusiast
+description: Java and web engineering, DevOps, Docker, Hybris
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: http://www.gravatar.com/avatar/e4e97f80dc5fd2216f2e5fc981a51667.jpg?s=512
